# gst-identity-plugin

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/logicl/: CMakeLists.txt  logicl.cpp  logicl.h
src/logicl/kernels/: rgb2gray.cl
src/oclkernels/: rgb2gray.cl
src/oclwrapper/: CMakeLists.txt  ocl.cpp  ocl.h
src/plugins/: CMakeLists.txt  gstidentity.cpp  gstidentity.h  gstoclrgb2gray.cpp  gstoclrgb2gray.h  ocl.cpp  ocl.h  rgb2gray.cl
